overflow fix

--- a/styles/_aboutMeSection.scss
+++ b/styles/_aboutMeSection.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   @media (min-width: $desktopBP) {
-    width: 70%;
+    width: 90%;
     margin-inline: auto;
   }
 }
@@ -32,6 +32,7 @@
   @media (min-width: $desktopBP) {
     flex-direction: row;
     text-align: center;
+    gap: 6em;
     article:nth-child(1) {
       flex: 0 0 38%;
     }
