--- a/styles/_heroSection.scss
+++ b/styles/_heroSection.scss
@@ -142,13 +142,22 @@
   }
 }
 
+@media (min-width: $desktopBP) {
+  .overflow-hidden {
+    position: absolute;
+    width: 100vw;
+    height: 100vw;
+    overflow-x: hidden;
+  }
+}
+
 .hero-illustration {
   width: 102vw;
   @media (min-width: $desktopBP) {
     width: 70vw;
     position: absolute;
-    right: -25%;
-    top: 20vh;
+    right: -5%;
+    top: 80vh;
   }
 }
 
